k8s/base/api-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: end-to-end-devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: 198452822403.dkr.ecr.ap-south-1.amazonaws.com/end-to-end-devops-dev-api-gateway:latest
          ports:
            - containerPort: 5000
