k8s/base/auth-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: end-to-end-devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: 198452822403.dkr.ecr.ap-south-1.amazonaws.com/end-to-end-devops-dev-auth-service:latest
          ports:
            - containerPort: 4000
