k8s/base/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: end-to-end-devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: 198452822403.dkr.ecr.ap-south-1.amazonaws.com/end-to-end-devops-dev-frontend:latest
          ports:
            - containerPort: 3000
