k8s/base/order-consumer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-consumer
  namespace: end-to-end-devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-consumer
  template:
    metadata:
      labels:
        app: order-consumer
    spec:
      containers:
        - name: order-consumer
          image: 198452822403.dkr.ecr.ap-south-1.amazonaws.com/end-to-end-devops-dev-orders-service:latest
          command: ["node", "src/queue/consumer.js"]
