k8s/base/orders-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-service
  namespace: end-to-end-devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders-service
  template:
    metadata:
      labels:
        app: orders-service
    spec:
      containers:
        - name: orders-service
          image: 198452822403.dkr.ecr.ap-south-1.amazonaws.com/end-to-end-devops-dev-orders-service:latest
          ports:
            - containerPort: 7000
