k8s/base/api-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: end-to-end-devops
spec:
  selector:
    app: api-gateway
  ports:
    - port: 5000
      targetPort: 5000
