k8s/base/auth-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: end-to-end-devops
spec:
  selector:
    app: auth-service
  ports:
    - port: 4000
      targetPort: 4000
