k8s/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: end-to-end-devops
spec:
  selector:
    app: frontend
  ports:
    - port: 3000
      targetPort: 3000
