k8s/base/orders-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders-service
  namespace: end-to-end-devops
spec:
  selector:
    app: orders-service
  ports:
    - port: 7000
      targetPort: 7000
